--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "botman/driver-facebook": "^1.10",
+        "botman/driver-web": "^1.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mpociot/botman": "^2.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
