--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "algolia/algoliasearch-client-php": "^2.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/nova": "*",
+        "laravel/scout": "^7.1",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
@@ -45,6 +48,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./nova"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
