--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fruitcake/laravel-cors": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
