--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,11 @@
 /storage/*.key
 /vendor
 .env
+.env.backup
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.idea
-_ide_helper.php
-nova
-nova-components
+/.idea
+/.vscode
